src/scss/components/tables/_tables.scss
.table__wrapper {
  display: grid;
  position: relative;
  grid-template-columns: 1fr auto;
  height: 300px;
}

.table--scroll-x,
.table--sticky {
  overflow-x: scroll;
}

.table__header-row {
  position: sticky;
  top: 0;
  z-index: 3;
}

.cell {
  white-space: nowrap;
}

// This is to fix a weird bug in FF to
// show a bottom border for the table th
.row__header {
  @include medium {
    transform: scale(0.9);
  }
}

.cell:last-child {
  width: 50px;
  padding: 0;
  justify-items: end;
}

th.sticky:first-child {
  @include medium {
    position: sticky;
    z-index: 2;
    left: 0;
  }
}

